--- a/src/NLP/alphabet_prototype_model.ipynb
+++ b/src/NLP/alphabet_prototype_model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:28.099297Z",
-     "start_time": "2019-08-07T01:26:03.815246Z"
+     "end_time": "2019-08-07T06:16:47.813821Z",
+     "start_time": "2019-08-07T06:16:28.130753Z"
     }
    },
    "outputs": [
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:29.634415Z",
-     "start_time": "2019-08-07T01:26:28.104295Z"
+     "end_time": "2019-08-07T06:16:49.270104Z",
+     "start_time": "2019-08-07T06:16:47.819819Z"
     }
    },
    "outputs": [],
@@ -48,13 +48,42 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from konlpy.tag import Okt\n",
+    "import hgtk\n",
     "import tensorflow as tf\n",
     "from tensorflow.python.keras.preprocessing import sequence\n",
     "from tensorflow import keras\n",
     "from tqdm import tqdm\n",
     "from collections import Counter\n",
     "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-07T06:16:49.353055Z",
+     "start_time": "2019-08-07T06:16:49.294090Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(action='once')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-07T06:16:49.371046Z",
+     "start_time": "2019-08-07T06:16:49.363055Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler"
    ]
   },
   {
@@ -66,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:29.964226Z",
-     "start_time": "2019-08-07T01:26:29.649406Z"
+     "end_time": "2019-08-07T06:16:49.689864Z",
+     "start_time": "2019-08-07T06:16:49.377042Z"
     }
    },
    "outputs": [
@@ -148,7 +177,7 @@
        "4                    케읍이 뭔데요 무슨사건있엇음?      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:29.985213Z",
-     "start_time": "2019-08-07T01:26:29.969224Z"
+     "end_time": "2019-08-07T06:16:49.703856Z",
+     "start_time": "2019-08-07T06:16:49.695860Z"
     }
    },
    "outputs": [],
@@ -178,11 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:30.030188Z",
-     "start_time": "2019-08-07T01:26:29.991211Z"
+     "end_time": "2019-08-07T06:16:49.745831Z",
+     "start_time": "2019-08-07T06:16:49.708853Z"
     }
    },
    "outputs": [
@@ -206,41 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:30.056172Z",
-     "start_time": "2019-08-07T01:26:30.038183Z"
+     "end_time": "2019-08-07T06:16:49.779812Z",
+     "start_time": "2019-08-07T06:16:49.769818Z"
     }
    },
    "outputs": [],
    "source": [
     "datasets.label = datasets.label.astype('int')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:30.088155Z",
-     "start_time": "2019-08-07T01:26:30.064168Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16163292399601725"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(datasets[datasets.label ==1])/ len(datasets[datasets.label ==0]) # 유해한 레이블의 데이터가 많이 부족함 데이터 편향ㅠㅠ"
    ]
   },
   {
@@ -253,38 +257,7 @@
    },
    "source": [
     "# Tokenize\n",
-    "## 형태소분석"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-07T01:26:41.018892Z",
-     "start_time": "2019-08-07T01:26:30.099148Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\jpype\\_core.py:210: UserWarning: \n",
-      "-------------------------------------------------------------------------------\n",
-      "Deprecated: convertStrings was not specified when starting the JVM. The default\n",
-      "behavior in JPype will be False starting in JPype 0.8. The recommended setting\n",
-      "for new code is convertStrings=False.  The legacy value of True was assumed for\n",
-      "this session. If you are a user of an application that reported this warning,\n",
-      "please file a ticket with the developer.\n",
-      "-------------------------------------------------------------------------------\n",
-      "\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "morp = Okt()"
+    "## 자모 단위로 분리"
    ]
   },
   {
@@ -292,8 +265,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:27:05.741675Z",
-     "start_time": "2019-08-07T01:26:41.023874Z"
+     "end_time": "2019-08-07T06:17:27.989234Z",
+     "start_time": "2019-08-07T06:17:26.354504Z"
     }
    },
    "outputs": [
@@ -301,83 +274,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 3500/3500 [00:24<00:00, 141.68it/s]\n"
+      "\r",
+      "  0%|                                                                                                                                                                                    | 0/3500 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "ord() expected a character, but string of length 24 found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-a8c8885bc366>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmorped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mhgtk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecompose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# Stemming은 하지 않는다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-a8c8885bc366>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmorped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mhgtk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecompose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# Stemming은 하지 않는다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\hgtk\\letter.py\u001b[0m in \u001b[0;36mdecompose\u001b[1;34m(hangul_letter)\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhangul_letter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m     \u001b[0mcode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhangul_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhangul_letter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m     \u001b[0mcho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjoong\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjong\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecompose_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\hgtk\\letter.py\u001b[0m in \u001b[0;36mhangul_index\u001b[1;34m(letter)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mhangul_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mFIRST_HANGUL_UNICODE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: ord() expected a character, but string of length 24 found"
      ]
     }
    ],
    "source": [
-    "morped = [morp.pos(_, norm=True, join=True) for _ in tqdm(datasets.chat)] # Stemming은 하지 않는다."
+    "morped = [hgtk.letter.decompose(_) for _ in tqdm(datasets.chat)] # Stemming은 하지 않는다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:27:05.760669Z",
-     "start_time": "2019-08-07T01:27:05.747673Z"
+     "end_time": "2019-08-07T06:10:22.550512Z",
+     "start_time": "2019-08-07T06:10:20.545Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['자기/Noun',\n",
-       "  '잘못/Noun',\n",
-       "  '인거/Josa',\n",
-       "  '알/Noun',\n",
-       "  '면/Josa',\n",
-       "  '중/Noun',\n",
-       "  '고딩/Noun',\n",
-       "  '도/Josa',\n",
-       "  '먼저/Noun',\n",
-       "  '사과/Noun',\n",
-       "  '하/Suffix',\n",
-       "  '는/Josa',\n",
-       "  '걸아는데/Verb'],\n",
-       " ['싹둑/Noun',\n",
-       "  '이/Josa',\n",
-       "  '채팅/Noun',\n",
-       "  '창/Noun',\n",
-       "  '관리/Noun',\n",
-       "  '중/Noun',\n",
-       "  '입니다/Adjective'],\n",
-       " ['싹둑/Noun',\n",
-       "  '이/Josa',\n",
-       "  '채팅/Noun',\n",
-       "  '창/Noun',\n",
-       "  '관리/Noun',\n",
-       "  '중/Noun',\n",
-       "  '입니다/Adjective'],\n",
-       " ['어제/Noun',\n",
-       "  '어글/Noun',\n",
-       "  '아직도/Adverb',\n",
-       "  '가/Verb',\n",
-       "  '?/Punctuation',\n",
-       "  '개인/Noun',\n",
-       "  '적/Suffix',\n",
-       "  '으로/Josa',\n",
-       "  '사과/Noun',\n",
-       "  '하셨대/Verb',\n",
-       "  '그만해/Adjective',\n",
-       "  '칭구들앙/Noun'],\n",
-       " ['케읍/Noun',\n",
-       "  '이/Josa',\n",
-       "  '뭔/Modifier',\n",
-       "  '데/Noun',\n",
-       "  '요/Josa',\n",
-       "  '무슨/Modifier',\n",
-       "  '사건/Noun',\n",
-       "  '있/Adjective',\n",
-       "  '엇음/Noun',\n",
-       "  '?/Punctuation']]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "morped[:5]"
    ]
@@ -395,8 +324,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-07T01:27:06.235409Z",
-     "start_time": "2019-08-07T01:27:05.765662Z"
+     "end_time": "2019-08-07T05:12:37.595186Z",
+     "start_time": "2019-08-07T05:12:37.239393Z"
     }
    },
    "outputs": [
