--- a/src/make_csv.ipynb
+++ b/src/make_csv.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_csv(f_name,n_url):\n",
+    "def make_csv(f_name,n_url=50):\n",
     "    con = sqlite3.connect(\"FinalTwitchDb.db\")\n",
     "    cur = con.cursor()\n",
     "    cur.execute(\"SELECT content,url_id FROM chat WHERE url_id IN (SELECT id FROM url ORDER BY random() LIMIT ?)\",[n_url])\n",
