make csv and make pandas file update complete

--- a/src/make_csv.ipynb
+++ b/src/make_csv.ipynb
@@ -14,31 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_csv(f_name,n_url=50):\n",
     "    con = sqlite3.connect(\"FinalTwitchDb.db\")\n",
     "    cur = con.cursor()\n",
-    "    cur.execute(\"SELECT content,url_id FROM chat WHERE url_id IN (SELECT id FROM url ORDER BY random() LIMIT ?)\",[n_url])\n",
+    "    cur.execute(\"SELECT content,url_id FROM chat WHERE id IN (SELECT id FROM chat ORDER BY random() LIMIT ?)\",[n_url])\n",
     "    result = cur.fetchall()\n",
     "    f = open('{}.csv'.format(f_name),'w',encoding='utf-16',newline='')\n",
     "    wr = csv.writer(f)\n",
+    "    wr.writerow(['comment'+'\\t'+'url_id'+'\\t'+'label'])\n",
     "    for _ in result:\n",
-    "        wr.writerow([_[0],_[1]])\n",
+    "        wr.writerow([_[0]+'\\t'+str(_[1])])\n",
     "    f.close()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_csv(f_name):\n",
-    "    dataset = pd.read_csv('{}.csv'.format(f_name),sep=',',encoding='utf-16',engine='c')\n",
+    "    dataset = pd.read_csv('{}.csv'.format(f_name),sep='\\t',encoding='utf-16',engine='c')\n",
     "    return dataset"
    ]
   }
