--- a/src/NLP/recall_model_vs_dict.ipynb
+++ b/src/NLP/recall_model_vs_dict.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.068189Z",
-     "start_time": "2019-08-12T03:40:21.319789Z"
+     "end_time": "2019-08-12T07:01:06.691442Z",
+     "start_time": "2019-08-12T07:00:53.742765Z"
     }
    },
    "outputs": [
@@ -36,8 +36,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.124158Z",
-     "start_time": "2019-08-12T03:40:31.074186Z"
+     "end_time": "2019-08-12T07:01:06.743421Z",
+     "start_time": "2019-08-12T07:01:06.697438Z"
     }
    },
    "outputs": [],
@@ -58,8 +58,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.137150Z",
-     "start_time": "2019-08-12T03:40:31.130156Z"
+     "end_time": "2019-08-12T07:01:06.759403Z",
+     "start_time": "2019-08-12T07:01:06.753407Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.287065Z",
-     "start_time": "2019-08-12T03:40:31.143148Z"
+     "end_time": "2019-08-12T07:01:06.917313Z",
+     "start_time": "2019-08-12T07:01:06.767398Z"
     }
    },
    "outputs": [
@@ -173,8 +173,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.313050Z",
-     "start_time": "2019-08-12T03:40:31.292061Z"
+     "end_time": "2019-08-12T07:01:06.964284Z",
+     "start_time": "2019-08-12T07:01:06.933303Z"
     }
    },
    "outputs": [
@@ -202,8 +202,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.332038Z",
-     "start_time": "2019-08-12T03:40:31.322044Z"
+     "end_time": "2019-08-12T07:01:06.982275Z",
+     "start_time": "2019-08-12T07:01:06.972281Z"
     }
    },
    "outputs": [],
@@ -216,8 +216,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:31.363021Z",
-     "start_time": "2019-08-12T03:40:31.341034Z"
+     "end_time": "2019-08-12T07:01:07.018254Z",
+     "start_time": "2019-08-12T07:01:06.989271Z"
     }
    },
    "outputs": [
@@ -241,8 +241,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:51.551428Z",
-     "start_time": "2019-08-12T03:40:31.371032Z"
+     "end_time": "2019-08-12T07:01:35.424939Z",
+     "start_time": "2019-08-12T07:01:07.023251Z"
     }
    },
    "outputs": [
@@ -260,7 +260,7 @@
       "-------------------------------------------------------------------------------\n",
       "\n",
       "  \"\"\")\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:19<00:00, 155.15it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:26<00:00, 111.26it/s]\n"
      ]
     }
    ],
@@ -274,8 +274,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:51.581410Z",
-     "start_time": "2019-08-12T03:40:51.564420Z"
+     "end_time": "2019-08-12T07:01:35.506893Z",
+     "start_time": "2019-08-12T07:01:35.479909Z"
     }
    },
    "outputs": [
@@ -303,8 +303,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:51.646370Z",
-     "start_time": "2019-08-12T03:40:51.587407Z"
+     "end_time": "2019-08-12T07:01:35.618829Z",
+     "start_time": "2019-08-12T07:01:35.515890Z"
     }
    },
    "outputs": [],
@@ -321,8 +321,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:51.710336Z",
-     "start_time": "2019-08-12T03:40:51.652368Z"
+     "end_time": "2019-08-12T07:01:35.671798Z",
+     "start_time": "2019-08-12T07:01:35.654808Z"
     }
    },
    "outputs": [],
@@ -344,8 +344,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:51.863246Z",
-     "start_time": "2019-08-12T03:40:51.737321Z"
+     "end_time": "2019-08-12T07:01:35.838703Z",
+     "start_time": "2019-08-12T07:01:35.683792Z"
     }
    },
    "outputs": [],
@@ -374,8 +374,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:55.542133Z",
-     "start_time": "2019-08-12T03:40:51.888232Z"
+     "end_time": "2019-08-12T07:01:39.209766Z",
+     "start_time": "2019-08-12T07:01:35.855692Z"
     }
    },
    "outputs": [
@@ -398,19 +398,19 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_2 (Embedding)      (None, None, 10)          100000    \n",
+      "embedding (Embedding)        (None, None, 10)          100000    \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, None, 32)          992       \n",
+      "conv1d (Conv1D)              (None, None, 32)          992       \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, None, 32)          0         \n",
+      "dropout (Dropout)            (None, None, 32)          0         \n",
       "_________________________________________________________________\n",
-      "conv1d_5 (Conv1D)            (None, None, 32)          3104      \n",
+      "conv1d_1 (Conv1D)            (None, None, 32)          3104      \n",
       "_________________________________________________________________\n",
-      "global_max_pooling1d_2 (Glob (None, 32)                0         \n",
+      "global_max_pooling1d (Global (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 32)                0         \n",
+      "dropout_1 (Dropout)          (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 66        \n",
+      "dense (Dense)                (None, 2)                 66        \n",
       "=================================================================\n",
       "Total params: 104,162\n",
       "Trainable params: 104,162\n",
@@ -429,8 +429,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:56.261722Z",
-     "start_time": "2019-08-12T03:40:55.555126Z"
+     "end_time": "2019-08-12T07:01:39.837404Z",
+     "start_time": "2019-08-12T07:01:39.214763Z"
     }
    },
    "outputs": [],
@@ -443,15 +443,15 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:56.279710Z",
-     "start_time": "2019-08-12T03:40:56.267716Z"
+     "end_time": "2019-08-12T07:01:39.851399Z",
+     "start_time": "2019-08-12T07:01:39.841403Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['loss', 'recall_10']"
+       "['loss', 'recall']"
       ]
      },
      "execution_count": 15,
@@ -468,8 +468,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.148214Z",
-     "start_time": "2019-08-12T03:40:56.285706Z"
+     "end_time": "2019-08-12T07:01:40.658935Z",
+     "start_time": "2019-08-12T07:01:39.856395Z"
     }
    },
    "outputs": [
@@ -477,13 +477,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3000/3000 [==============================] - ETA: 44s - loss: 0.8468 - recall_10: 0.78 - ETA: 2s - loss: 2.0507 - recall_10: 0.6777 - ETA: 1s - loss: 2.2407 - recall_10: 0.667 - ETA: 0s - loss: 2.3112 - recall_10: 0.662 - ETA: 0s - loss: 2.3430 - recall_10: 0.660 - ETA: 0s - loss: 2.3365 - recall_10: 0.665 - 1s 257us/sample - loss: 2.3104 - recall_10: 0.6663\n"
+      "3000/3000 [==============================] - ETA: 43s - loss: 0.2186 - recall: 0.937 - ETA: 1s - loss: 0.4439 - recall: 0.900 - ETA: 0s - loss: 0.4356 - recall: 0.90 - ETA: 0s - loss: 0.4502 - recall: 0.89 - ETA: 0s - loss: 0.4183 - recall: 0.90 - 1s 236us/sample - loss: 0.4018 - recall: 0.9073\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2.3104324951171873, 0.6663333]"
+       "[0.4018002461095651, 0.9073333]"
       ]
      },
      "execution_count": 16,
@@ -507,8 +507,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.162204Z",
-     "start_time": "2019-08-12T03:40:57.154209Z"
+     "end_time": "2019-08-12T07:01:40.672924Z",
+     "start_time": "2019-08-12T07:01:40.662932Z"
     }
    },
    "outputs": [],
@@ -522,8 +522,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.254150Z",
-     "start_time": "2019-08-12T03:40:57.168201Z"
+     "end_time": "2019-08-12T07:01:40.773871Z",
+     "start_time": "2019-08-12T07:01:40.678925Z"
     }
    },
    "outputs": [],
@@ -536,8 +536,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.278137Z",
-     "start_time": "2019-08-12T03:40:57.258150Z"
+     "end_time": "2019-08-12T07:01:40.809846Z",
+     "start_time": "2019-08-12T07:01:40.778865Z"
     }
    },
    "outputs": [
@@ -637,8 +637,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.299124Z",
-     "start_time": "2019-08-12T03:40:57.283136Z"
+     "end_time": "2019-08-12T07:01:40.830836Z",
+     "start_time": "2019-08-12T07:01:40.814845Z"
     }
    },
    "outputs": [],
@@ -651,8 +651,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.328112Z",
-     "start_time": "2019-08-12T03:40:57.307119Z"
+     "end_time": "2019-08-12T07:01:40.859818Z",
+     "start_time": "2019-08-12T07:01:40.849825Z"
     }
    },
    "outputs": [
@@ -676,15 +676,15 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.359091Z",
-     "start_time": "2019-08-12T03:40:57.343099Z"
+     "end_time": "2019-08-12T07:01:40.887803Z",
+     "start_time": "2019-08-12T07:01:40.864816Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(129, 40)"
+       "(84, 85)"
       ]
      },
      "execution_count": 22,
@@ -701,8 +701,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.385075Z",
-     "start_time": "2019-08-12T03:40:57.365091Z"
+     "end_time": "2019-08-12T07:01:40.915786Z",
+     "start_time": "2019-08-12T07:01:40.892799Z"
     }
    },
    "outputs": [
@@ -726,15 +726,15 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.419056Z",
-     "start_time": "2019-08-12T03:40:57.393071Z"
+     "end_time": "2019-08-12T07:01:40.944769Z",
+     "start_time": "2019-08-12T07:01:40.925780Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7633136094674556"
+       "0.4970414201183432"
       ]
      },
      "execution_count": 24,
@@ -751,8 +751,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-12T03:40:57.447040Z",
-     "start_time": "2019-08-12T03:40:57.424052Z"
+     "end_time": "2019-08-12T07:01:40.972753Z",
+     "start_time": "2019-08-12T07:01:40.950766Z"
     }
    },
    "outputs": [
@@ -769,6 +769,31 @@
    ],
    "source": [
     "sum(recall_data.filtered)/len(recall_data) # 비속어사전 방법의 recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-12T07:02:04.560192Z",
+     "start_time": "2019-08-12T07:02:04.547200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9073333333333333"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(result.predict == result.label)/len(result) # 모델 방법의 recall"
    ]
   },
   {
