attention_suyoung_data

--- a/src/NLP/bpe_Attention_수영.ipynb
+++ b/src/NLP/bpe_Attention_수영.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:13:27.570911Z",
-     "start_time": "2019-08-21T10:13:27.523932Z"
+     "end_time": "2019-08-22T01:39:42.359816Z",
+     "start_time": "2019-08-22T01:39:22.065431Z"
     }
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n",
-      "Chan 2019-08-21 \n",
+      "Chan 2019-08-22 \n",
       "\n",
       "numpy 1.16.4\n",
       "pandas 0.24.2\n",
@@ -33,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:13:27.644864Z",
-     "start_time": "2019-08-21T10:13:27.635870Z"
+     "end_time": "2019-08-22T01:39:42.426777Z",
+     "start_time": "2019-08-22T01:39:42.366813Z"
     }
    },
    "outputs": [],
@@ -57,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:13:29.967533Z",
-     "start_time": "2019-08-21T10:13:29.807624Z"
+     "end_time": "2019-08-22T01:39:42.818553Z",
+     "start_time": "2019-08-22T01:39:42.440771Z"
     }
    },
    "outputs": [
@@ -141,7 +146,7 @@
        "4           4                  이거인 듯      18      0"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:13:31.173847Z",
-     "start_time": "2019-08-21T10:13:31.165848Z"
+     "end_time": "2019-08-22T01:39:47.440907Z",
+     "start_time": "2019-08-22T01:39:42.827549Z"
     }
    },
    "outputs": [],
@@ -171,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:40.826880Z",
-     "start_time": "2019-08-21T10:47:40.790897Z"
+     "end_time": "2019-08-22T01:39:47.505872Z",
+     "start_time": "2019-08-22T01:39:47.455901Z"
     }
    },
    "outputs": [],
@@ -185,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:42.158118Z",
-     "start_time": "2019-08-21T10:47:42.002207Z"
+     "end_time": "2019-08-22T01:39:47.730742Z",
+     "start_time": "2019-08-22T01:39:47.510867Z"
     }
    },
    "outputs": [
@@ -199,7 +204,7 @@
        "(4192, 2096)"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:43.557316Z",
-     "start_time": "2019-08-21T10:47:43.542325Z"
+     "end_time": "2019-08-22T01:39:47.751729Z",
+     "start_time": "2019-08-22T01:39:47.735739Z"
     }
    },
    "outputs": [],
@@ -227,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:43.920113Z",
-     "start_time": "2019-08-21T10:47:43.897123Z"
+     "end_time": "2019-08-22T01:39:47.793706Z",
+     "start_time": "2019-08-22T01:39:47.759726Z"
     }
    },
    "outputs": [],
@@ -242,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:44.516768Z",
-     "start_time": "2019-08-21T10:47:44.404837Z"
+     "end_time": "2019-08-22T01:39:47.997590Z",
+     "start_time": "2019-08-22T01:39:47.799702Z"
     }
    },
    "outputs": [
@@ -254,11 +259,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|                                                                                         | 0/3144 [00:00<?, ?it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████| 3144/3144 [00:00<00:00, 393239.45it/s]\n",
-      "  0%|                                                                                         | 0/1048 [00:00<?, ?it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████| 1048/1048 [00:00<00:00, 131118.92it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████| 3144/3144 [00:00<00:00, 393087.07it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████| 1048/1048 [00:00<00:00, 262237.84it/s]\n"
      ]
     }
    ],
@@ -270,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:44.982505Z",
-     "start_time": "2019-08-21T10:47:44.973508Z"
+     "end_time": "2019-08-22T01:39:48.027595Z",
+     "start_time": "2019-08-22T01:39:48.009584Z"
     }
    },
    "outputs": [
@@ -284,7 +286,7 @@
        "((3144,), (1048,))"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:49.025189Z",
-     "start_time": "2019-08-21T10:47:48.875275Z"
+     "end_time": "2019-08-22T01:39:48.651214Z",
+     "start_time": "2019-08-22T01:39:48.038565Z"
     }
    },
    "outputs": [],
@@ -312,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:47:58.394836Z",
-     "start_time": "2019-08-21T10:47:58.384843Z"
+     "end_time": "2019-08-22T01:39:48.713181Z",
+     "start_time": "2019-08-22T01:39:48.656212Z"
     }
    },
    "outputs": [],
@@ -336,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:48:01.595004Z",
-     "start_time": "2019-08-21T10:48:01.507066Z"
+     "end_time": "2019-08-22T01:39:48.794134Z",
+     "start_time": "2019-08-22T01:39:48.728171Z"
     }
    },
    "outputs": [],
@@ -460,11 +462,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:48:26.610702Z",
-     "start_time": "2019-08-21T10:48:26.567742Z"
+     "end_time": "2019-08-22T01:39:48.886083Z",
+     "start_time": "2019-08-22T01:39:48.801129Z"
     }
    },
    "outputs": [],
@@ -591,11 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:48:26.988491Z",
-     "start_time": "2019-08-21T10:48:26.940519Z"
+     "end_time": "2019-08-22T02:25:37.022212Z",
+     "start_time": "2019-08-22T02:25:36.678410Z"
     }
    },
    "outputs": [],
@@ -611,11 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:51:26.079088Z",
-     "start_time": "2019-08-21T10:48:43.623978Z"
+     "end_time": "2019-08-22T02:32:38.872798Z",
+     "start_time": "2019-08-22T02:25:37.044200Z"
     },
     "scrolled": true
    },
@@ -643,65 +645,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avg_loss is tensor(0.7755, dtype=torch.float64)\n",
-      "Accuracy of the model 0.5583545918367347\n",
+      "avg_loss is tensor(0.7695, dtype=torch.float64)\n",
+      "Accuracy of the model 0.5599489795918368\n",
       "Running EPOCH 2\n",
-      "avg_loss is tensor(0.7366, dtype=torch.float64)\n",
-      "Accuracy of the model 0.6106505102040817\n",
+      "avg_loss is tensor(0.7395, dtype=torch.float64)\n",
+      "Accuracy of the model 0.607780612244898\n",
       "Running EPOCH 3\n",
-      "avg_loss is tensor(0.7082, dtype=torch.float64)\n",
-      "Accuracy of the model 0.6358418367346939\n",
+      "avg_loss is tensor(0.7125, dtype=torch.float64)\n",
+      "Accuracy of the model 0.6352040816326531\n",
       "Running EPOCH 4\n",
-      "avg_loss is tensor(0.6856, dtype=torch.float64)\n",
-      "Accuracy of the model 0.6552933673469388\n",
+      "avg_loss is tensor(0.6931, dtype=torch.float64)\n",
+      "Accuracy of the model 0.6536989795918368\n",
       "Running EPOCH 5\n",
-      "avg_loss is tensor(0.6648, dtype=torch.float64)\n",
-      "Accuracy of the model 0.6776147959183674\n",
+      "avg_loss is tensor(0.6695, dtype=torch.float64)\n",
+      "Accuracy of the model 0.6690051020408163\n",
       "Running EPOCH 6\n",
-      "avg_loss is tensor(0.6431, dtype=torch.float64)\n",
-      "Accuracy of the model 0.6967474489795918\n",
+      "avg_loss is tensor(0.6501, dtype=torch.float64)\n",
+      "Accuracy of the model 0.6926020408163265\n",
       "Running EPOCH 7\n",
-      "avg_loss is tensor(0.6180, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7206632653061225\n",
+      "avg_loss is tensor(0.6315, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7072704081632653\n",
       "Running EPOCH 8\n",
-      "avg_loss is tensor(0.5958, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7362882653061225\n",
+      "avg_loss is tensor(0.6126, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7276785714285714\n",
       "Running EPOCH 9\n",
-      "avg_loss is tensor(0.5815, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7480867346938775\n",
+      "avg_loss is tensor(0.5921, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7410714285714286\n",
       "Running EPOCH 10\n",
-      "avg_loss is tensor(0.5686, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7557397959183674\n",
+      "avg_loss is tensor(0.5707, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7602040816326531\n",
       "Running EPOCH 11\n",
-      "avg_loss is tensor(0.5508, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7662627551020408\n",
+      "avg_loss is tensor(0.5516, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7713647959183674\n",
       "Running EPOCH 12\n",
-      "avg_loss is tensor(0.5369, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7869897959183674\n",
+      "avg_loss is tensor(0.5355, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7802933673469388\n",
       "Running EPOCH 13\n",
-      "avg_loss is tensor(0.5203, dtype=torch.float64)\n",
-      "Accuracy of the model 0.796875\n",
+      "avg_loss is tensor(0.5206, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7882653061224489\n",
       "Running EPOCH 14\n",
       "avg_loss is tensor(0.5092, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8042091836734694\n",
+      "Accuracy of the model 0.8010204081632653\n",
       "Running EPOCH 15\n",
-      "avg_loss is tensor(0.4969, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8115433673469388\n",
+      "avg_loss is tensor(0.4996, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8067602040816326\n",
       "Running EPOCH 16\n",
-      "avg_loss is tensor(0.4788, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8214285714285714\n",
+      "avg_loss is tensor(0.4923, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8115433673469388\n",
       "Running EPOCH 17\n",
-      "avg_loss is tensor(0.4671, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8274872448979592\n",
+      "avg_loss is tensor(0.4858, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8172831632653061\n",
       "Running EPOCH 18\n",
-      "avg_loss is tensor(0.4541, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8376913265306123\n",
+      "avg_loss is tensor(0.4745, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8242984693877551\n",
       "Running EPOCH 19\n",
-      "avg_loss is tensor(0.4460, dtype=torch.float64)\n",
-      "Accuracy of the model 0.84375\n",
+      "avg_loss is tensor(0.4631, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8287627551020408\n",
       "Running EPOCH 20\n",
-      "avg_loss is tensor(0.4379, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8549107142857143\n"
+      "avg_loss is tensor(0.4549, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8348214285714286\n",
+      "Running EPOCH 21\n",
+      "avg_loss is tensor(0.4441, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8440688775510204\n",
+      "Running EPOCH 22\n",
+      "avg_loss is tensor(0.4334, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8494897959183674\n",
+      "Running EPOCH 23\n",
+      "avg_loss is tensor(0.4182, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8558673469387755\n",
+      "Running EPOCH 24\n",
+      "avg_loss is tensor(0.4137, dtype=torch.float64)\n",
+      "Accuracy of the model 0.860969387755102\n",
+      "Running EPOCH 25\n",
+      "avg_loss is tensor(0.3959, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8743622448979592\n",
+      "Running EPOCH 26\n",
+      "avg_loss is tensor(0.3871, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8823341836734694\n",
+      "Running EPOCH 27\n",
+      "avg_loss is tensor(0.3888, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8848852040816326\n",
+      "Running EPOCH 28\n",
+      "avg_loss is tensor(0.3700, dtype=torch.float64)\n",
+      "Accuracy of the model 0.892219387755102\n",
+      "Running EPOCH 29\n",
+      "avg_loss is tensor(0.3697, dtype=torch.float64)\n",
+      "Accuracy of the model 0.890625\n",
+      "Running EPOCH 30\n",
+      "avg_loss is tensor(0.3619, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8960459183673469\n"
      ]
     }
    ],
@@ -709,7 +741,7 @@
     "loss = torch.nn.BCELoss()\n",
     "optimizer = torch.optim.Adam(attention_model.parameters())\n",
     "\n",
-    "losses, accuracy = train(attention_model, train_loader, loss, optimizer, epochs=20,\n",
+    "losses, accuracy = train(attention_model, train_loader, loss, optimizer, epochs=30,\n",
     "                         use_regularization=True, C=0.03, clip=True)\n"
    ]
   },
@@ -722,11 +754,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:51:27.385344Z",
-     "start_time": "2019-08-21T10:51:26.085085Z"
+     "end_time": "2019-08-22T02:32:40.301979Z",
+     "start_time": "2019-08-22T02:32:38.888787Z"
     }
    },
    "outputs": [
@@ -743,14 +775,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.71      0.79      0.75       538\n",
-      "           1       0.75      0.67      0.70       510\n",
+      "           0       0.74      0.75      0.75       555\n",
+      "           1       0.72      0.71      0.71       493\n",
       "\n",
       "    accuracy                           0.73      1048\n",
       "   macro avg       0.73      0.73      0.73      1048\n",
       "weighted avg       0.73      0.73      0.73      1048\n",
       "\n",
-      "0.7280534351145038\n"
+      "0.732824427480916\n"
      ]
     }
    ],
@@ -767,11 +799,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T10:57:54.280025Z",
-     "start_time": "2019-08-21T10:57:54.273027Z"
+     "end_time": "2019-08-22T02:32:41.686196Z",
+     "start_time": "2019-08-22T02:32:41.651208Z"
     }
    },
    "outputs": [],
@@ -790,11 +822,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T11:00:35.282967Z",
-     "start_time": "2019-08-21T11:00:34.697303Z"
+     "end_time": "2019-08-22T02:41:43.194072Z",
+     "start_time": "2019-08-22T02:41:42.674369Z"
     }
    },
    "outputs": [
@@ -809,25 +841,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attention visualization created for 500 samples\n"
+      "Attention visualization created for 485 samples\n"
      ]
     }
    ],
    "source": [
     "test_last_idx = 500\n",
     "wts = get_activation_wts(attention_model,\n",
-    "                         Variable(torch.from_numpy(x_padded_test[y_test==1][:test_last_idx]).type(torch.LongTensor)))\n",
+    "                         Variable(torch.from_numpy(x_padded_test[y_preds.data.numpy()==1][:test_last_idx]).type(torch.LongTensor)))\n",
     "# print(torch.sum(wts,1).data.numpy().tolist())\n",
-    "visualize_attention(wts, X_test[:test_last_idx], filename='attention.html')"
+    "visualize_attention(wts, np.array(X_test)[y_preds.data.numpy()==1][:test_last_idx], filename='bpe_attention.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T07:49:40.474241Z",
-     "start_time": "2019-08-21T07:49:40.450257Z"
+     "end_time": "2019-08-22T01:50:06.145372Z",
+     "start_time": "2019-08-22T01:50:06.115392Z"
     }
    },
    "outputs": [],
@@ -919,6 +951,36 @@
     "    fOut.close()\n",
     "  \n",
     "    return\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-22T02:08:43.202336Z",
+     "start_time": "2019-08-22T02:08:43.065418Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\torch\\serialization.py:251: UserWarning: Couldn't retrieve source code for container of type StructuredSelfAttention. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.save(attention_model, '../model/self_attention_bp.pt')"
    ]
   }
  ],
