내 커밋을 받아라

--- a/src/NLP/nkt_Attention_수영.ipynb
+++ b/src/NLP/nkt_Attention_수영.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:25.131652Z",
-     "start_time": "2019-08-22T07:16:11.530895Z"
+     "end_time": "2019-08-23T09:48:08.039597Z",
+     "start_time": "2019-08-23T09:47:49.640157Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chan 2019-08-22 \n",
+      "Chan 2019-08-23 \n",
       "\n",
       "numpy 1.16.4\n",
       "pandas 0.24.2\n",
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:30.370657Z",
-     "start_time": "2019-08-22T07:16:25.138649Z"
+     "end_time": "2019-08-23T09:48:16.186927Z",
+     "start_time": "2019-08-23T09:48:08.044593Z"
     }
    },
    "outputs": [
@@ -83,8 +83,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:33.600804Z",
-     "start_time": "2019-08-22T07:16:30.375652Z"
+     "end_time": "2019-08-23T09:48:19.116246Z",
+     "start_time": "2019-08-23T09:48:16.198918Z"
     }
    },
    "outputs": [],
@@ -99,8 +99,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:34.306401Z",
-     "start_time": "2019-08-22T07:16:33.606802Z"
+     "end_time": "2019-08-23T09:48:19.729891Z",
+     "start_time": "2019-08-23T09:48:19.121241Z"
     }
    },
    "outputs": [],
@@ -113,8 +113,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:34.404347Z",
-     "start_time": "2019-08-22T07:16:34.310400Z"
+     "end_time": "2019-08-23T09:48:19.829835Z",
+     "start_time": "2019-08-23T09:48:19.733890Z"
     }
    },
    "outputs": [],
@@ -127,8 +127,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:34.444323Z",
-     "start_time": "2019-08-22T07:16:34.411342Z"
+     "end_time": "2019-08-23T09:48:19.849824Z",
+     "start_time": "2019-08-23T09:48:19.833834Z"
     }
    },
    "outputs": [
@@ -155,8 +155,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:35.206888Z",
-     "start_time": "2019-08-22T07:16:34.486300Z"
+     "end_time": "2019-08-23T09:48:22.314487Z",
+     "start_time": "2019-08-23T09:48:19.854822Z"
     }
    },
    "outputs": [],
@@ -173,8 +173,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:38.477018Z",
-     "start_time": "2019-08-22T07:16:35.209885Z"
+     "end_time": "2019-08-23T09:48:24.463181Z",
+     "start_time": "2019-08-23T09:48:22.320412Z"
     }
    },
    "outputs": [],
@@ -188,8 +188,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:16:38.543980Z",
-     "start_time": "2019-08-22T07:16:38.485011Z"
+     "end_time": "2019-08-23T09:48:24.525144Z",
+     "start_time": "2019-08-23T09:48:24.467177Z"
     }
    },
    "outputs": [],
@@ -202,8 +202,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:17:05.032892Z",
-     "start_time": "2019-08-22T07:16:38.568965Z"
+     "end_time": "2019-08-23T09:49:39.940255Z",
+     "start_time": "2019-08-23T09:48:24.532140Z"
     }
    },
    "outputs": [
@@ -226,11 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:19:09.659575Z",
-     "start_time": "2019-08-22T07:19:09.266796Z"
+     "end_time": "2019-08-23T09:49:40.473931Z",
+     "start_time": "2019-08-23T09:49:39.980214Z"
     }
    },
    "outputs": [],
@@ -240,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:22:57.168299Z",
-     "start_time": "2019-08-22T07:19:56.114988Z"
+     "end_time": "2019-08-23T09:52:20.172335Z",
+     "start_time": "2019-08-23T09:49:40.481929Z"
     }
    },
    "outputs": [
@@ -252,7 +252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "122274it [03:01, 675.43it/s] \n"
+      "122274it [02:39, 767.14it/s] \n"
      ]
     }
    ],
@@ -262,21 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:02.077742Z",
-     "start_time": "2019-08-22T07:53:02.068754Z"
+     "end_time": "2019-08-23T09:52:20.186329Z",
+     "start_time": "2019-08-23T09:52:20.178332Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(111416, 111416)"
+       "(111332, 111332)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,11 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:04.521360Z",
-     "start_time": "2019-08-22T07:53:04.381423Z"
+     "end_time": "2019-08-23T09:52:20.506144Z",
+     "start_time": "2019-08-23T09:52:20.195322Z"
     }
    },
    "outputs": [],
@@ -302,11 +302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:05.066032Z",
-     "start_time": "2019-08-22T07:53:05.061033Z"
+     "end_time": "2019-08-23T09:52:20.527132Z",
+     "start_time": "2019-08-23T09:52:20.518137Z"
     }
    },
    "outputs": [],
@@ -316,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:06.069458Z",
-     "start_time": "2019-08-22T07:53:05.222941Z"
+     "end_time": "2019-08-23T09:52:21.297690Z",
+     "start_time": "2019-08-23T09:52:20.535128Z"
     }
    },
    "outputs": [
@@ -331,13 +331,13 @@
       "고빈도 단어:\n",
       "사망 :  4943\n",
       "노무현 :  4309\n",
-      "진짜 :  3471\n",
-      "속보 :  3069\n",
+      "진짜 :  3446\n",
+      "속보 :  3070\n",
       "찐 :  3012\n",
       "에반데 :  2655\n",
-      "브베 :  2319\n",
+      "브베 :  2255\n",
       "미친 :  2051\n",
-      "와 :  1882\n",
+      "와 :  1835\n",
       "새끼 :  1789\n",
       "\n",
       "단어 사전:\n",
@@ -352,7 +352,7 @@
       "8 브베\n",
       "9 미친\n",
       "\n",
-      "단어 사전 크기:  45813\n"
+      "단어 사전 크기:  45753\n"
      ]
     }
    ],
@@ -403,11 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:06.109434Z",
-     "start_time": "2019-08-22T07:53:06.075454Z"
+     "end_time": "2019-08-23T09:52:21.340665Z",
+     "start_time": "2019-08-23T09:52:21.302690Z"
     }
    },
    "outputs": [
@@ -415,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "원본:  ['ㄸㄴㄴ', 'ㄱㅎㅅ']\n",
-      "문자 -> 숫자:  [9527, 12304]\n",
-      "숫자 -> 문자:  ㄸㄴㄴ ㄱㅎㅅ\n"
+      "원본:  ['짱', '베']\n",
+      "문자 -> 숫자:  [3217, 199]\n",
+      "숫자 -> 문자:  짱 베\n"
      ]
     }
    ],
@@ -443,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:10.683817Z",
-     "start_time": "2019-08-22T07:53:09.755348Z"
+     "end_time": "2019-08-23T09:52:22.317142Z",
+     "start_time": "2019-08-23T09:52:21.345663Z"
     }
    },
    "outputs": [],
@@ -464,11 +464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:11.216510Z",
-     "start_time": "2019-08-22T07:53:10.687813Z"
+     "end_time": "2019-08-23T09:52:22.616949Z",
+     "start_time": "2019-08-23T09:52:22.321105Z"
     }
    },
    "outputs": [],
@@ -485,11 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:15.084307Z",
-     "start_time": "2019-08-22T07:53:15.015336Z"
+     "end_time": "2019-08-23T09:52:22.740865Z",
+     "start_time": "2019-08-23T09:52:22.620932Z"
     }
    },
    "outputs": [],
@@ -509,11 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:17.348002Z",
-     "start_time": "2019-08-22T07:53:17.311023Z"
+     "end_time": "2019-08-23T09:52:22.789833Z",
+     "start_time": "2019-08-23T09:52:22.745862Z"
     }
    },
    "outputs": [],
@@ -633,11 +633,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:18.672247Z",
-     "start_time": "2019-08-22T07:53:18.628271Z"
+     "end_time": "2019-08-23T09:52:22.842805Z",
+     "start_time": "2019-08-23T09:52:22.795831Z"
     }
    },
    "outputs": [],
@@ -764,11 +764,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:53:28.218781Z",
-     "start_time": "2019-08-22T07:53:28.166814Z"
+     "end_time": "2019-08-23T09:52:22.944761Z",
+     "start_time": "2019-08-23T09:52:22.855801Z"
     }
    },
    "outputs": [],
@@ -785,11 +785,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:00:05.368581Z",
-     "start_time": "2019-08-22T07:53:30.301593Z"
+     "end_time": "2019-08-23T09:58:14.858046Z",
+     "start_time": "2019-08-23T09:52:22.948743Z"
     },
     "scrolled": true
    },
@@ -805,7 +805,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\torch\\nn\\functional.py:1320: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
+      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n",
       "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\ipykernel_launcher.py:68: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\torch\\nn\\functional.py:1332: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
       "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\ipykernel_launcher.py:64: UserWarning: torch.nn.utils.clip_grad_norm is now deprecated in favor of torch.nn.utils.clip_grad_norm_.\n"
      ]
     },
@@ -813,35 +817,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avg_loss is tensor(0.5239, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7204754601226994\n",
+      "avg_loss is tensor(0.5225, dtype=torch.float64)\n",
+      "Accuracy of the model 0.7242618865030674\n",
       "Running EPOCH 2\n",
-      "avg_loss is tensor(0.3385, dtype=torch.float64)\n",
-      "Accuracy of the model 0.8640840682515337\n",
+      "avg_loss is tensor(0.3349, dtype=torch.float64)\n",
+      "Accuracy of the model 0.866995782208589\n",
       "Running EPOCH 3\n",
-      "avg_loss is tensor(0.2649, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9023796970858896\n",
+      "avg_loss is tensor(0.2657, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9031345858895705\n",
       "Running EPOCH 4\n",
-      "avg_loss is tensor(0.2154, dtype=torch.float64)\n",
-      "Accuracy of the model 0.925086273006135\n",
+      "avg_loss is tensor(0.2196, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9237682131901841\n",
       "Running EPOCH 5\n",
-      "avg_loss is tensor(0.1773, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9420053680981595\n",
+      "avg_loss is tensor(0.1838, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9401001725460123\n",
       "Running EPOCH 6\n",
-      "avg_loss is tensor(0.1478, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9548145130368099\n",
+      "avg_loss is tensor(0.1560, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9525857937116564\n",
       "Running EPOCH 7\n",
-      "avg_loss is tensor(0.1250, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9639330904907976\n",
+      "avg_loss is tensor(0.1336, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9615366180981595\n",
       "Running EPOCH 8\n",
-      "avg_loss is tensor(0.1078, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9698523773006135\n",
+      "avg_loss is tensor(0.1173, dtype=torch.float64)\n",
+      "Accuracy of the model 0.967300134202454\n",
       "Running EPOCH 9\n",
-      "avg_loss is tensor(0.0931, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9743098159509203\n",
+      "avg_loss is tensor(0.1018, dtype=torch.float64)\n",
+      "Accuracy of the model 0.9732433857361963\n",
       "Running EPOCH 10\n",
-      "avg_loss is tensor(0.0817, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9780003834355828\n"
+      "avg_loss is tensor(0.0929, dtype=torch.float64)\n",
+      "Accuracy of the model 0.975364263803681\n"
      ]
     }
    ],
@@ -862,11 +866,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:00:10.623575Z",
-     "start_time": "2019-08-22T08:00:05.374578Z"
+     "end_time": "2019-08-23T09:58:18.751812Z",
+     "start_time": "2019-08-23T09:58:14.864040Z"
     }
    },
    "outputs": [
@@ -883,14 +887,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.89      0.91     13021\n",
-      "           1       0.91      0.94      0.92     14833\n",
+      "           0       0.92      0.88      0.90     13010\n",
+      "           1       0.90      0.94      0.92     14823\n",
       "\n",
-      "    accuracy                           0.91     27854\n",
-      "   macro avg       0.91      0.91      0.91     27854\n",
-      "weighted avg       0.91      0.91      0.91     27854\n",
+      "    accuracy                           0.91     27833\n",
+      "   macro avg       0.91      0.91      0.91     27833\n",
+      "weighted avg       0.91      0.91      0.91     27833\n",
       "\n",
-      "0.9140159402599267\n"
+      "0.9075198505371321\n"
      ]
     }
    ],
@@ -907,11 +911,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:00:10.654559Z",
-     "start_time": "2019-08-22T08:00:10.637566Z"
+     "end_time": "2019-08-23T09:58:18.848754Z",
+     "start_time": "2019-08-23T09:58:18.814775Z"
     }
    },
    "outputs": [],
@@ -930,11 +934,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:00:14.852154Z",
-     "start_time": "2019-08-22T08:00:10.666551Z"
+     "end_time": "2019-08-23T09:58:22.526647Z",
+     "start_time": "2019-08-23T09:58:18.854752Z"
     }
    },
    "outputs": [
@@ -956,11 +960,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:01:18.384795Z",
-     "start_time": "2019-08-22T08:01:17.953043Z"
+     "end_time": "2019-08-23T09:58:23.173277Z",
+     "start_time": "2019-08-23T09:58:22.532644Z"
     }
    },
    "outputs": [],
@@ -970,11 +974,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T08:02:14.656595Z",
-     "start_time": "2019-08-22T08:02:14.509680Z"
+     "end_time": "2019-08-23T09:58:25.793775Z",
+     "start_time": "2019-08-23T09:58:23.180272Z"
     }
    },
    "outputs": [
@@ -982,11 +986,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\torch\\nn\\functional.py:1320: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
-      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n",
-      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\ipykernel_launcher.py:68: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\torch\\nn\\functional.py:1332: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
-      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
+      "C:\\Users\\skarn\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\ipykernel_launcher.py:68: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
      ]
     },
     {
@@ -1007,11 +1007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-22T07:36:03.108876Z",
-     "start_time": "2019-08-22T07:36:03.071897Z"
+     "end_time": "2019-08-23T09:58:18.805781Z",
+     "start_time": "2019-08-23T09:58:18.767802Z"
     }
    },
    "outputs": [],
