--- a/src/NLP/bpe_Attention_수영.ipynb
+++ b/src/NLP/bpe_Attention_수영.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:36.540947Z",
-     "start_time": "2019-08-23T08:17:24.698723Z"
+     "end_time": "2019-08-23T11:47:23.585631Z",
+     "start_time": "2019-08-23T11:47:14.750680Z"
     }
    },
    "outputs": [
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:36.610914Z",
-     "start_time": "2019-08-23T08:17:36.545938Z"
+     "end_time": "2019-08-23T11:47:23.626606Z",
+     "start_time": "2019-08-23T11:47:23.590627Z"
     }
    },
    "outputs": [],
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:47.387719Z",
-     "start_time": "2019-08-23T08:17:43.444983Z"
+     "end_time": "2019-08-23T11:47:26.791796Z",
+     "start_time": "2019-08-23T11:47:23.631606Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:48.108305Z",
-     "start_time": "2019-08-23T08:17:47.393715Z"
+     "end_time": "2019-08-23T11:47:27.335487Z",
+     "start_time": "2019-08-23T11:47:26.795795Z"
     }
    },
    "outputs": [],
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:48.149283Z",
-     "start_time": "2019-08-23T08:17:48.113302Z"
+     "end_time": "2019-08-23T11:47:27.375464Z",
+     "start_time": "2019-08-23T11:47:27.339484Z"
     }
    },
    "outputs": [],
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:48.175269Z",
-     "start_time": "2019-08-23T08:17:48.156293Z"
+     "end_time": "2019-08-23T11:47:27.397452Z",
+     "start_time": "2019-08-23T11:47:27.379463Z"
     }
    },
    "outputs": [
@@ -134,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:50.345022Z",
-     "start_time": "2019-08-23T08:17:48.180269Z"
+     "end_time": "2019-08-23T11:47:31.791942Z",
+     "start_time": "2019-08-23T11:47:27.403447Z"
     }
    },
    "outputs": [],
@@ -152,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:53.087451Z",
-     "start_time": "2019-08-23T08:17:50.349021Z"
+     "end_time": "2019-08-23T11:47:34.132618Z",
+     "start_time": "2019-08-23T11:47:31.796940Z"
     }
    },
    "outputs": [],
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:17:53.164407Z",
-     "start_time": "2019-08-23T08:17:53.094449Z"
+     "end_time": "2019-08-23T11:47:34.193569Z",
+     "start_time": "2019-08-23T11:47:34.138599Z"
     }
    },
    "outputs": [],
@@ -181,23 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:18:33.945033Z",
-     "start_time": "2019-08-23T08:18:09.142252Z"
+     "end_time": "2019-08-23T11:48:11.262380Z",
+     "start_time": "2019-08-23T11:47:34.202563Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(122274, 61137)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-7b222d84d1ce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# undersampling\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomUnderSampler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_sample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\imblearn\\base.py\u001b[0m in \u001b[0;36mfit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m     82\u001b[0m             self.sampling_strategy, y, self._sampling_type)\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 84\u001b[1;33m         \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fit_resample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     85\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mbinarize_y\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\imblearn\\under_sampling\\_prototype_selection\\_random_under_sampler.py\u001b[0m in \u001b[0;36m_fit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    133\u001b[0m             return (safe_indexing(X, idx_under), safe_indexing(y, idx_under),\n\u001b[0;32m    134\u001b[0m                     idx_under)\n\u001b[1;32m--> 135\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0msafe_indexing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx_under\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msafe_indexing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx_under\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    136\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_more_tags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\DataAnalysis\\lib\\site-packages\\sklearn\\utils\\__init__.py\u001b[0m in \u001b[0;36msafe_indexing\u001b[1;34m(X, indices)\u001b[0m\n\u001b[0;32m    217\u001b[0m                                    indices.dtype.kind == 'i'):\n\u001b[0;32m    218\u001b[0m             \u001b[1;31m# This is often substantially faster than X[indices]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 219\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    220\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -208,11 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:18:34.541693Z",
-     "start_time": "2019-08-23T08:18:33.982012Z"
+     "end_time": "2019-08-23T11:48:11.283367Z",
+     "start_time": "2019-08-23T11:47:16.829Z"
     }
    },
    "outputs": [],
@@ -223,11 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:18:44.764835Z",
-     "start_time": "2019-08-23T08:18:44.371059Z"
+     "end_time": "2019-08-23T11:48:11.290362Z",
+     "start_time": "2019-08-23T11:47:27.471Z"
     }
    },
    "outputs": [],
@@ -238,23 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:18:50.702471Z",
-     "start_time": "2019-08-23T08:18:48.758561Z"
+     "end_time": "2019-08-23T11:48:11.295360Z",
+     "start_time": "2019-08-23T11:47:27.701Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 91705/91705 [00:00<00:00, 804880.38it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████| 30569/30569 [00:00<00:00, 804546.06it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# bpe tokenizing\n",
     "tokenized_train = bp_tokenize(X_train)\n",
@@ -263,36 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:18:55.046940Z",
-     "start_time": "2019-08-23T08:18:55.036950Z"
+     "end_time": "2019-08-23T11:48:11.300358Z",
+     "start_time": "2019-08-23T11:47:27.856Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((91705,), (30569,))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenized_train.shape, tokenized_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:19:12.034205Z",
-     "start_time": "2019-08-23T08:19:10.372156Z"
+     "end_time": "2019-08-23T11:48:11.304358Z",
+     "start_time": "2019-08-23T11:47:29.895Z"
     }
    },
    "outputs": [],
@@ -305,11 +289,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:19:23.932408Z",
-     "start_time": "2019-08-23T08:19:23.782473Z"
+     "end_time": "2019-08-23T11:48:11.309353Z",
+     "start_time": "2019-08-23T11:47:30.123Z"
     }
    },
    "outputs": [],
@@ -329,11 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:23:49.487179Z",
-     "start_time": "2019-08-23T08:23:49.454196Z"
+     "end_time": "2019-08-23T11:48:11.318346Z",
+     "start_time": "2019-08-23T11:47:32.127Z"
     }
    },
    "outputs": [],
@@ -453,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:23:57.771429Z",
-     "start_time": "2019-08-23T08:23:57.730458Z"
+     "end_time": "2019-08-23T11:48:11.324344Z",
+     "start_time": "2019-08-23T11:47:33.296Z"
     }
    },
    "outputs": [],
@@ -584,11 +568,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:40:50.594239Z",
-     "start_time": "2019-08-23T08:40:50.563239Z"
+     "end_time": "2019-08-23T11:48:11.328342Z",
+     "start_time": "2019-08-23T11:47:38.174Z"
     }
    },
    "outputs": [],
@@ -948,7 +932,7 @@
     }
    ],
    "source": [
-    "torch.save(attention_model, '../model/self_attention_bp.pt')"
+    "# torch.save(attention_model, '../model/self_attention_bp.pt')"
    ]
   },
   {
@@ -964,6 +948,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
